deploy-jenkins-ingress/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  labels:
    app: jenkins
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins        
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - jenkins
                topologyKey: topology.kubernetes.io/region       # node-labels do arquivo kind
            - weight: 99
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - jenkins
                topologyKey: topology.kubernetes.io/zone        # node-labels do arquivo kind
      serviceAccountName: jenkins
      volumes:
      - name: volume-jenkins
        persistentVolumeClaim:
          claimName: pvc-jenkins                      # Referenciando o nome do pvc
      - name: docker-sock                             
        hostPath: 
            path: /var/run                            # Volume mapeado pelo arquivo kind.yaml, onde nele conseguimos interagir com o docker.sock
      containers:
      - name: jenkins
        image: abimasantos/jenkins-jdk-8u191:v1
        ports:
          - name: http-port
            containerPort: 8080
          - name: jnlp-port
            containerPort: 50000
        resources: {}
        securityContext:                              # setando usuario root
          allowPrivilegeEscalation: false             # setando usuario root
          runAsUser: 0                                # setando usuario root
        volumeMounts:
        - name: volume-jenkins                        # montando o volume no container
          mountPath: /var/jenkins_home           
        - name: docker-sock                           # montando o volume no container
          mountPath: /var/run
