deploy-jenkins-ingress/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: jenkins-local.com.br          # definir dominio no /etc/hosts com o IP do cluster
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service-jenkins   
            port: 
              number: 8080
